feat: add resource delete route
